--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import "./App.scss";
+
 .jumbotron {
   padding:20px 0px 20px 0px;
   margin:0px auto;
@@ -22,3 +24,9 @@
   border-bottom: 1px ridge;
   
 }
+
+
+
+
+
+  
