--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@
   top: 0.5rem;
   right: 0.5rem;
 }
+
 .todolist .todoitem .form-check-label {
   width: 100%;
 }
@@ -50,7 +51,9 @@
   margin-right: 1rem;
 }
 
-
+ul li:hover {
+  background: #ddd;
+}
 
 
 
